--- a/framekolkanan140.html
+++ b/framekolkanan140.html
@@ -4,11 +4,20 @@
 <html>
 
 <head>
-    <title>Home Page 2</title>
+    <title>Home Page</title>
 </head>
 
 <body>
-    <img src="https://www.liputan6.com/hot/read/6180764/tempat-wisata-di-bandung">
+    San Digital Agency merupakan Perusahaan Digital jasa pembuatan Desain,
+    website profesional untuk keperluan bisnis seperti company
+    profile maupun portofolio pribadi kamu, Mulai dari SEO, Marketing, etc <br>
+    Mulai Partnership & Bangun Karir Bersama Kami <br>
+    San di ambil dari kata Sunset dalam bahasa inggris yang artinya Matahari Terbenam.
+    Yang rencana ke depan akan di buat <b> Bisnis atau Usaha Coffee Shop </b>
+    <i>Fasilitas yang</i> Kami sediakan <u> Kerja </u> Magang
+    <i><u> Belajar </i></u>. <br>
+    bahkan main ge hingga ngobrol santai<br>
+    <b><i><u> mulai dari belajar IT, Main Musik, Kelas Bisnis dan lain sebagai nya </b></i></u> 
 </body>
 </html>
 ```
