--- a/framekol_kanan140.html
+++ b/framekol_kanan140.html
@@ -1,5 +1,12 @@
 ```
-    <html>
-        
-    </html>
+<html>
+
+<head>
+    <title>Home Page 2</title>
+</head>
+
+<body>
+    <img src="https://www.liputan6.com/hot/read/6180764/tempat-wisata-di-bandung">
+</body>
+</html>
 ```
