--- a/framekol_kanan140.html
+++ b/framekol_kanan140.html
@@ -1,6 +1,5 @@
 
-```
-    <html>
+```<html>
         <head>
             <title>Home Page 2</title>
         </head>
@@ -8,5 +7,4 @@
         <body>
             <img src="https://www.liputan6.com/hot/read/6180764/tempat-wisata-di-bandung">
         </body>
-    </html>
-```
+    </html>```
