--- a/framekol_kanan140.html
+++ b/framekol_kanan140.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <img src="https://www.liputan6.com/hot/read/6180764/tempat-wisata-di-bandung">
+    <h1>hello</h1>
 </body>
 </html>
 ```
