--- a/start.html
+++ b/start.html
@@ -1,4 +1,27 @@
 
+# Home Page
+
+```
+<html>
+
+<head>
+    <title>Home Page</title>
+</head>
+
+<body>
+    San Digital Agency merupakan Perusahaan Digital jasa pembuatan Desain,
+    website profesional untuk keperluan bisnis seperti company
+    profile maupun portofolio pribadi kamu, Mulai dari SEO, Marketing, etc <br>
+    Mulai Partnership & Bangun Karir Bersama Kami <br>
+    San di ambil dari kata Sunset dalam bahasa inggris yang artinya Matahari Terbenam.
+    Yang rencana ke depan akan di buat <b> Bisnis atau Usaha Coffee Shop </b>
+    <i>Fasilitas yang</i> Kami sediakan <u> Kerja </u> Magang
+    <i><u> Belajar </i></u>. <br>
+    bahkan main ge hingga ngobrol santai<br>
+    <b><i><u> mulai dari belajar IT, Main Musik, Kelas Bisnis dan lain sebagai nya </b></i></u> 
+</body>
+</html>
+```
 
 ```
 <html>
@@ -8,7 +31,9 @@
 </head>
 
 <body>
-    <h1>hello</h1>
+    <img src="https://www.liputan6.com/hot/read/6180764/tempat-wisata-di-bandung">
 </body>
 </html>
 ```
+
+![image](https://raw.githubusercontent.com/SansDev-Comunity/HTML/refs/heads/main/img/alun-alun%20bandung.png)
